--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,15 @@ after_success:
     - docker push ravindrapatade/multi-server
     - docker push ravindrapatade/multi-worker
 
-
-
-
-#Take those images and push them to docker hub
-
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: "ap-south-1"
+    app: "multi-docker"
+    env: "Multi-Docker-env"
+    bucket_name: "elasticbeanstalk-ap-south-1-592580790253"
+    bucket_path: "docker-multi"
+    on:
+        branch: master
+    access_key_id: "$AWS_ACCESS_KEY"
+    secret_access_key: "$AWS_SECRET_KEY"
