Fix for environment name

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
     provider: elasticbeanstalk
     region: "ap-south-1"
     app: "multi-docker"
-    env: "Multi-Docker-env"
+    env: "MultiDocker-env"
     bucket_name: "elasticbeanstalk-ap-south-1-592580790253"
     bucket_path: "docker-multi"
     on:
